# ajaali-fs-test

./: .gitignore  README.md  README.txt
ajaali/: README.md  pyproject.toml  start_server.py
ajaali/ajaali/: app.py  exception.py  template.py
ajaali/ajaali/database/: db.py  flights.py
ajaali/ajaali/fullstack_test/: flight_data_generator.py
ajaali/ajaali/models/: flight.py  search.py  user.py
ajaali/ajaali/routes/view/: search_flights.py
ajaali/ajaali/services/: flight_service.py
ajaali/ajaali/static/css/: styles.css
ajaali/ajaali/static/js/: checkbox.js  date-picker.js  dropdown-menu.js  swap-locations.js
ajaali/ajaali/templates/base/: base.html
ajaali/ajaali/templates/pages/: search-flights.html
ajaali/ajaali/templates/partials/base/: header.html
ajaali/ajaali/templates/partials/search-flights/: flight-details.html  flights-filters.html  flights-result.html  flights-sort.html  more-results.html  search-form.html
ajaali/ajaali/utils/: build_url.py  converter.py  filters.py  sort.py
aws_cdk/: cdk.json  package-lock.json  package.json
aws_cdk/lib/: aws-stack.ts
