[tool.poetry]
name = "ajaali"
version = "0.1.0"
description = "ajaali-flights"
authors = ["Luis Gameiro <l.gameiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "start_server:main"


[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
starlette = "^0.40.0"
itsdangerous = "^2.2.0"
boto3 = "^1.35.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

